# oxide

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
example/: CMakeLists.txt
example/resources/: resources.json
example/resources/shaders/button/: button.frag  button.vert
example/resources/shaders/example_3d/: example_3d.frag  example_3d.vert
example/resources/shaders/main/: main.frag  main.vert
example/src/: main.cpp
example/src/button/: button.cpp  button.h
oxide/: CMakeLists.txt
oxide/include/oxide/: Events.h  Renderer.h  Window.h  oxide.h
oxide/src/Events/: Events.cpp  Events.h
oxide/src/Renderer/: Renderer.cpp  Renderer.h
oxide/src/Window/: Window.cpp  Window.h
oxide/src/oxide/: oxide.cpp  oxide.h
